webdir = $(datadir)/insanity/web

nobase_dist_web_DATA = \
	__init__.py \
	insanityweb/__init__.py \
	insanityweb/management/commands/daemon.py \
	insanityweb/management/commands/__init__.py \
	insanityweb/management/__init__.py \
	insanityweb/models.py \
	insanityweb/runner.py \
	insanityweb/templatetags/__init__.py \
	insanityweb/templatetags/insanity_extra.py \
	insanityweb/urls.py \
	insanityweb/views.py \
	manage.py \
	settings.py \
	site_media/jquery.min.js \
	site_media/style.css \
	templates/404.html \
	templates/insanityweb/available_tests.html \
	templates/insanityweb/base.html \
	templates/insanityweb/current.html \
	templates/insanityweb/index.html \
	templates/insanityweb/matrix_checklist_row.html \
	templates/insanityweb/matrix_navigation.html \
	templates/insanityweb/matrix_view.html \
	templates/insanityweb/test_args_dict.html \
	templates/insanityweb/test_checklist_dict.html \
	templates/insanityweb/test_extrainfo_dict.html \
	templates/insanityweb/testrun_summary.html \
	templates/insanityweb/test_summary.html \
	urls.py \
	wsgi.py

